package projecteInicial;

public class MallardDuck extends Duck {

        public void fly() {
		System.out.println("I'm flying!!");
	}
	public void quack() {
		System.out.println("Quack");
	}
        public void display() {
		System.out.println("I'm a real Mallard duck");
	}
}
