package projecteInicial;

public class RubberDuck extends Duck {
 
	public void display() {
		System.out.println("I'm a rubber duckie");
	}
        
        public void quack() {
		System.out.println("Squeak");
	}
        public void fly() {
		System.out.println("I can't fly");
	}
}
