@startuml

title __PROJECTEINICIAL's Class Diagram__\n

  package projecteInicial {
    class DecoyDuck {
        + display()
        + quack()
        + fly()
    }
  }
  

  package projecteInicial {
    abstract class Duck {
        + Duck()
        {abstract} ~ fly()
        {abstract} ~ quack()
        {abstract} ~ display()
        + swim()
    }
  }
  

  package projecteInicial {
    class MallardDuck {
        + fly()
        + quack()
        + display()
    }
  }
  

  package projecteInicial {
    class MiniDuckSimulator {
        {static} + main()
    }
  }
  

  package projecteInicial {
    class ModelDuck {
        + fly()
        + quack()
        + display()
    }
  }
  

  package projecteInicial {
    class RedHeadDuck {
        + fly()
        + quack()
        + display()
    }
  }
  

  package projecteInicial {
    class RubberDuck {
        + display()
        + quack()
        + fly()
    }
  }
  

  package projecteInicial {
    class StrategyEstudiants {
        {static} + main()
    }
  }
  

  DecoyDuck -up-|> Duck
  MallardDuck -up-|> Duck
  ModelDuck -up-|> Duck
  RedHeadDuck -up-|> Duck
  RubberDuck -up-|> Duck


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
